<resources>
    <string name="app_name">Arya\nPortfolio</string>
    <string name="about_us">About Us</string>
    <string name="portfolio">Portfolio</string>
    <string name="news">News</string>
    <string name="email_support">Email Support</string>
    <string name="product_engineering">PRODUCTS</string>
    <string name="technology_used">TECHNOLOGY</string>
    <string name="recent_news">RECENT</string>
    <string name="top_news">TOP NEWS</string>
    <string name="acheivements">ACHEIVEMENTS</string>
    <string name="challenges">CHALLENGES</string>
    <string name="overview">Overview</string>
    <string name="no_network">Internet not available"</string>
    <string name="no_news">No News available"</string>
    <string name="titleAboutus">ABOUT US</string>
    <string name="titleProduct">PRODUCTS</string>
    <string name="titleNews">NEWS</string>
    <string name="haveQuery">Have a query? Chat with us.</string>
    <string name="titleChat">CHATWITH US</string>
    <string name="hintSendMessage">Send a message...</string>
    <string name="chat_support">Chat Support</string>
    <string name="aryanews">ARYA NEWS</string>
    <string name="titleAryaNews">ARYA NEWS</string>
    <string name="contactUs">Contact Us</string>
    <string name="titleContactUs">CONTACT US</string>
    <string name="message">MESSAGE</string>
    <string name="emails">Emails</string>
    <string name="contactUsAddress">Callifornia Office \n\n1291 E. Hillsdale Blvd. Suite 205, \nFoster City, CA 94404 \nTel. : +1-650-389-2886, +1-650-242-8260 \nEmail: info@aryausa.com  \n\n\nIndia Office \n\n217, 2nd Floor, Metropolis Tower, \nAjmer Road, Jaipur (Rajasthan), India \nTel. : +91-141-6621525, +91-141-2812458 \nEmail: info@aryausa.com</string>
    <string name="callOrEmail">Call Or Email</string>
    <string name="industry">INDUSTRY</string>
    <string name="consulting_solutions"><![CDATA[Consulting & Solutions]]></string>
    <string name="searchKeyword">Search Keyword</string>
    <string name="nodetails">No Details</string>
    <string name="nolink">No Link Available</string>
    <string name="no_response">Unable to get response.</string>
    <string name="products">Products</string>
    <string name="expertise">Expertise</string>
    <string name="usecases">Use Cases</string>
    <string name="chatwithus">ChatWith Us</string>
    <string name="connent">Connect</string>
    <string name="titleExpertise">EXPERTISE</string>
    <string name="titleUseCases">USE CASES</string>
    <string name="titleConnect">CONNECT</string>
    <string name="usaOfficeAddress">1291 E. Hillsdale Blvd. Suite 205, \nFoster City, CA 94404</string>
    <string name="usaContactNumber1">+1-650-389-2886</string>
    <string name="usaContactNumber2">+1–650-242-8260</string>
    <string name="email"><u>info@aryausa.com</u></string>
    <string name="emailinfo">info@aryausa.com</string>
    <string name="emailsupport"><u>support@aryausa.com</u></string>
    <string name="emailaddresssupport">support@aryausa.com</string>
    <string name="emailquery"><u>business@aryausa.com</u></string>
    <string name="emailaddressquery">business@aryausa.com</string>
    <string name="indiaOfficeAddress">217, 2nd Floor, Metropolis Tower, \nAjmer Road, Jaipur (Rajasthan), India</string>
    <string name="indiaContactNumber1">+91-141-6621525</string>
    <string name="indiaContactNumber2">+91-141-2812458</string>
    <string name="usaOffice">Callifornia Office</string>
    <string name="indiaOffice">India Office</string>
    <string name="favNews">FAVOURITES</string>
    <string name="shareSub">AryaPortfolio</string>
    <string name="shareVia">Share Via...</string>
    <string name="productTitle">Product Title :</string>
    <string name="productWebLink">Product Web Link :</string>
    <string name="productOverview">Product Overview :</string>
    <string name="productAndroidLink">Product Android App :</string>
    <string name="productiosLink">Product IOS App :</string>
    <string name="openChatWithUs">openChatWithUs</string>
    <string name="startChat">START CHAT</string>
    <string name="latest">Latest</string>
    <string name="education">Education</string>
    <string name="retail">Retail</string>
    <string name="telecom">Telecom</string>
    <string name="hospitality">Hospitality</string>
    <string name="social">Social</string>
    <string name="gps">GPS</string>
    <string name="productivity">Productivity</string>
    <string name="games">Games</string>
    <string name="sports">Sports</string>
    <string name="social_model">Social Model</string>
    <string name="health_fitness"><![CDATA[Health & Fitness]]></string>
</resources>
