<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_gray">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/llSocialShare"
        android:background="@color/color_gray"
        android:padding="@dimen/dimen_8"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/usaOffice"
                android:textColor="@color/color_dark_gray"
                android:textSize="@dimen/font_14"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_5"
                android:text="@string/usaOfficeAddress"
                android:textColor="@color/color_dark_gray"
                android:textSize="@dimen/font_14" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_5"
                android:gravity="right">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/usaContactNumber1"
                    android:textColor="@color/color_dark_gray"
                    android:textSize="@dimen/font_14" />

                <ImageView
                    android:id="@+id/imgUSAContactNo1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/dimen_5"
                    android:layout_marginRight="@dimen/dimen_5"
                    android:src="@mipmap/ic_call_green_24dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_5"
                android:gravity="right">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/usaContactNumber2"
                    android:textColor="@color/color_dark_gray"
                    android:textSize="@dimen/font_14" />


                <ImageView
                    android:id="@+id/imgUSAContactNo2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/dimen_5"
                    android:layout_marginRight="@dimen/dimen_5"
                    android:src="@mipmap/ic_call_green_24dp" />
            </LinearLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_15"
                android:text="@string/indiaOffice"
                android:textColor="@color/color_dark_gray"
                android:textSize="@dimen/font_14"
                android:textStyle="bold" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_5"
                android:text="@string/indiaOfficeAddress"
                android:textColor="@color/color_dark_gray"
                android:textSize="@dimen/font_14" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_5"
                android:gravity="right">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/indiaContactNumber1"
                    android:textColor="@color/color_dark_gray"
                    android:textSize="@dimen/font_14" />


                <ImageView
                    android:id="@+id/imgINContactNo1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/dimen_5"
                    android:layout_marginRight="@dimen/dimen_5"
                    android:src="@mipmap/ic_call_green_24dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_5"
                android:gravity="right">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/indiaContactNumber2"
                    android:textColor="@color/color_dark_gray"
                    android:textSize="@dimen/font_14" />


                <ImageView
                    android:id="@+id/imgINContactNo2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/dimen_5"
                    android:layout_marginRight="@dimen/dimen_5"
                    android:src="@mipmap/ic_call_green_24dp" />
            </LinearLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_15"
                android:text="@string/emails"
                android:textColor="@color/color_dark_gray"
                android:textSize="@dimen/font_14"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/llEmailInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_5"
                android:visibility="gone">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="@dimen/dimen_5"
                    android:src="@mipmap/ic_email_black_24dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/email"
                    android:textColor="@color/color_dark_gray"
                    android:textSize="@dimen/font_14" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/llEmailSupport"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_5">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="@dimen/dimen_5"
                    android:src="@mipmap/ic_email_black_24dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/emailsupport"
                    android:textColor="@color/color_dark_gray"
                    android:textSize="@dimen/font_14" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/llEmailBusiness"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_5"
                android:visibility="gone">

                <ImageView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="@dimen/dimen_5"
                    android:src="@mipmap/ic_email_black_24dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/emailquery"
                    android:textColor="@color/color_dark_gray"
                    android:textSize="@dimen/font_14" />


            </LinearLayout>


        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/llSocialShare"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/dimen_10">

        <ImageView
            android:id="@+id/imgFacebook"
            android:layout_width="@dimen/dimen_50"
            android:layout_height="@dimen/dimen_50"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/dimen_5"
            android:layout_marginRight="@dimen/dimen_5"
            android:src="@mipmap/fb_logo" />

        <ImageView
            android:id="@+id/imgLinkedin"
            android:layout_width="@dimen/dimen_50"
            android:layout_height="@dimen/dimen_50"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/dimen_5"
            android:layout_marginRight="@dimen/dimen_5"
            android:src="@mipmap/ln_logo" />

        <ImageView
            android:id="@+id/imgTwitter"
            android:layout_width="@dimen/dimen_50"
            android:layout_height="@dimen/dimen_50"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/dimen_5"
            android:layout_marginRight="@dimen/dimen_5"
            android:src="@mipmap/tw_logo" />


    </LinearLayout>


</RelativeLayout>
