<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_gray"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/txtTechnologyNews"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/tab_selector"
                android:gravity="center"
                android:paddingBottom="@dimen/dimen_10"
                android:paddingTop="@dimen/dimen_10"
                android:text="@string/technology_used"
                android:textColor="@color/color_vrlight_gray"
                android:textSize="@dimen/font_14" />


            <TextView
                android:id="@+id/txtAryaNews"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/tab_selector"
                android:gravity="center"
                android:paddingBottom="@dimen/dimen_10"
                android:paddingTop="@dimen/dimen_10"
                android:text="@string/aryanews"
                android:textColor="@color/color_vrlight_gray"
                android:textSize="@dimen/font_14"
                android:visibility="gone"
               />

            <TextView
                android:id="@+id/txtFavNews"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/tab_selector"
                android:gravity="center"
                android:paddingBottom="@dimen/dimen_10"
                android:paddingTop="@dimen/dimen_10"
                android:text="@string/favNews"
                android:textColor="@color/color_vrlight_gray"
                android:textSize="@dimen/font_14" />

        </LinearLayout>

    </LinearLayout>

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshNews"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <GridView
            android:id="@+id/gvNews"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@color/color_gray"
            android:choiceMode="singleChoice"
            android:gravity="center"
            android:horizontalSpacing="@dimen/dimen_10"
            android:listSelector="@drawable/list_selector"
            android:numColumns="1"
            android:scrollbars="none"
            android:stretchMode="columnWidth"
            android:verticalSpacing="@dimen/dimen_10" />
    </android.support.v4.widget.SwipeRefreshLayout>

</LinearLayout>
