<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_gray">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/llTabs"
        android:orientation="vertical">


        <android.support.v4.widget.SwipeRefreshLayout
            android:id="@+id/swipeRefreshPortfolio"

            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <GridView
                android:id="@+id/gvProductEngineering"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:choiceMode="singleChoice"
                android:gravity="center"
                android:horizontalSpacing="@dimen/dimen_10"
                android:listSelector="@drawable/list_selector"
                android:numColumns="2"
                android:scrollbars="none"
                android:stretchMode="columnWidth"
                android:verticalSpacing="@dimen/dimen_10" />
        </android.support.v4.widget.SwipeRefreshLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/imgChatWithUs"
        android:layout_width="@dimen/dimen_50"
        android:layout_height="@dimen/dimen_50"
        android:layout_alignParentRight="true"
        android:src="@mipmap/ic_chat_green"
        android:layout_margin="@dimen/dimen_10"
        android:layout_above="@+id/llTabs"
        android:visibility="gone"
        />

    <LinearLayout
        android:id="@+id/llTabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/color_white"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_3"
            android:background="@color/color_light_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtProductEngineering"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingBottom="@dimen/dimen_10"
                android:paddingTop="@dimen/dimen_10"
                android:text="@string/product_engineering"
                android:textColor="@color/color_black"
                android:textSize="@dimen/font_14" />

            <TextView
                android:id="@+id/txtIndustry"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingBottom="@dimen/dimen_10"
                android:paddingTop="@dimen/dimen_10"
                android:text="@string/industry"
                android:textColor="@color/color_black"
                android:textSize="@dimen/font_14" />


            <TextView
                android:id="@+id/txtTechnologyUsed"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingBottom="@dimen/dimen_10"
                android:paddingTop="@dimen/dimen_10"
                android:text="@string/technology_used"
                android:textColor="@color/color_black"
                android:textSize="@dimen/font_14" />

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
