<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_gray"
        android:fillViewport="true"
        android:padding="@dimen/dimen_8"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">


            <TextView
                android:id="@+id/txtProductNameS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center_horizontal"
                android:text="ERAN"
                android:textColor="@color/color_dark_gray"
                android:textSize="@dimen/font_16"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_10"
                android:orientation="vertical">


                <ImageView
                    android:id="@+id/imgProductPicS"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="@dimen/dimen_200"
                    android:scaleType="fitXY"
                    android:src="@mipmap/ic_portfolio_black_512" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/imgProductPicS"
                    android:orientation="horizontal"
                   >


                    <ImageView
                        android:id="@+id/imgChatWithUs"
                        android:layout_width="@dimen/dimen_40"
                        android:layout_height="@dimen/dimen_40"
                        android:layout_gravity="center_vertical"
                        android:padding="@dimen/dimen_5"
                        android:src="@mipmap/ic_chat_green"
                        android:visibility="gone"/>

                    <ImageView
                        android:id="@+id/imgSupportEmail"
                        android:layout_width="@dimen/dimen_40"
                        android:layout_height="@dimen/dimen_40"
                        android:layout_gravity="center_vertical"
                        android:padding="@dimen/dimen_5"
                        android:src="@mipmap/ic_email_green" />


                </LinearLayout>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_rectangle"
                android:orientation="vertical"
                android:padding="@dimen/dimen_5">


                <com.arya.portfolio.custom.JustifiedTextView
                    android:id="@+id/txtOverviewS"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:gravity="center_vertical"
                    android:padding="@dimen/dimen_5"
                    android:text="@string/overview"
                    android:textColor="@color/color_dark_black"
                    android:textSize="@dimen/font_14" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_1"
                    android:background="@color/color_light_gray" />


                <TextView
                    android:id="@+id/txtWebLinkS"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:padding="@dimen/dimen_10"
                    android:text="www.aryausa.com"
                    android:textColor="@color/color_black"
                    android:textSize="@dimen/font_14" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_1"
                    android:background="@color/color_light_gray" />


                <TextView
                    android:id="@+id/txtPlatformS"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:padding="@dimen/dimen_10"
                    android:text="Platform- ios, Android"
                    android:textColor="@color/color_black"
                    android:textSize="@dimen/font_14" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_1"
                    android:background="@color/color_light_gray" />


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">


                    <ImageView
                        android:id="@+id/imgAndroid"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:padding="@dimen/dimen_5"
                        android:src="@mipmap/ic_android" />

                    <ImageView
                        android:id="@+id/imgIOS"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:padding="@dimen/dimen_5"
                        android:src="@mipmap/ic_ios" />


                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_10"
                android:background="@drawable/shape_rectangle"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/dimen_2"
                    android:paddingRight="@dimen/dimen_2">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingTop="@dimen/dimen_5"
                        android:weightSum="10">

                        <TextView
                            android:id="@+id/txtTechnologyUsed"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="3"
                            android:background="@drawable/tab_selector"
                            android:gravity="center"
                            android:paddingBottom="@dimen/dimen_5"
                            android:text="@string/technology_used"
                            android:textColor="@color/color_black"
                            android:textSize="@dimen/font_12" />

                        <TextView
                            android:id="@+id/txtAchievement"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="4"
                            android:background="@drawable/tab_selector"
                            android:gravity="center"
                            android:paddingBottom="@dimen/dimen_5"

                            android:text="@string/acheivements"
                            android:textColor="@android:color/black"
                            android:textSize="@dimen/font_12" />


                        <TextView
                            android:id="@+id/txtChallenges"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="3"
                            android:background="@drawable/tab_selector"
                            android:gravity="center"
                            android:paddingBottom="@dimen/dimen_5"

                            android:text="@string/challenges"
                            android:textColor="@color/color_black"
                            android:textSize="@dimen/font_12" />


                    </LinearLayout>

                    <View
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/color_light_gray" />

                    <LinearLayout
                        android:id="@+id/llSelectedTab"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_weight="1"
                        android:layout_margin="@dimen/dimen_5">


                        <com.arya.portfolio.custom.JustifiedTextView
                            android:id="@+id/txtSelectedTab"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="left"
                            android:background="@drawable/tab_selector"
                            android:padding="@dimen/dimen_5"
                            android:text="selected tab"
                            android:textColor="@color/color_dark_black"
                            android:textSize="@dimen/font_14" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>